@@ -25,20 +25,11 @@
     <layout class="QHBoxLayout" name="horizontalLayout_1">
      <item>
       <widget class="QLabel" name="folderLabel">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
        <property name="toolTip">
         <string>Base directory under which to put files</string>
        </property>
        <property name="text">
         <string>C&amp;ollection Folder:</string>
-       </property>
-       <property name="wordWrap">
-        <bool>false</bool>
        </property>
        <property name="buddy">
         <cstring>folderCombo</cstring>
@@ -58,6 +49,28 @@
        </property>
        <property name="whatsThis">
         <string>The collection folder to which the files will be transferred.</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QToolButton" name="optionsButton">
+       <property name="toolTip">
+        <string>&lt;html&gt;Show/hide additional controls to speficy destination track paths based on their metadata.&lt;/html&gt;</string>
+       </property>
+       <property name="whatsThis">
+        <string>&lt;html&gt;Show/hide additional controls to speficy destination track paths based on their metadata.&lt;/html&gt;</string>
+       </property>
+       <property name="text">
+        <string>Options</string>
+       </property>
+       <property name="icon">
+        <iconset theme="arrow-down"/>
+       </property>
+       <property name="checkable">
+        <bool>true</bool>
+       </property>
+       <property name="toolButtonStyle">
+        <enum>Qt::ToolButtonTextBesideIcon</enum>
        </property>
       </widget>
      </item>
@@ -119,32 +132,16 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QLabel" name="conflictLabel">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-         </widget>
+         <widget class="QLabel" name="conflictLabel"/>
         </item>
         <item>
-         <spacer name="spacer2_2">
+         <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeType">
-           <enum>QSizePolicy::Expanding</enum>
-          </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>150</width>
+            <width>40</width>
             <height>20</height>
            </size>
           </property>
